--- a/style.css
+++ b/style.css
@@ -57,3 +57,60 @@ input {
     outline: none;
     font-weight: 500;
 }
+
+a .icon {
+    font-size: 20px;
+    border-radius: 50px;
+}
+
+a .icon:hover {
+    background: #d2d2d2;
+}
+
+#container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 100px;
+}
+
+.col {
+    height: auto;
+    width: calc(100% / 5);
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 10px;
+
+}
+
+.card {
+    width: 100%;
+    margin: 0;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    border-radius: 20px;
+}
+
+#loader {
+    width: 30px;
+    height: 30px;
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    margin: 20px auto;
+    margin-top: 100px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
